--- a/index.html
+++ b/index.html
@@ -31,15 +31,58 @@
         <img class="happy-image" src="images/New Year Photo.png" alt="">
     </header>
     <main>
-        <section class="poster">
-            <!-- <img class="poster-image" src="images/Group 70.png" alt=""> -->
-            <div class="welcome">
-                <h2 class="midnight">Welcome to <br> midnight party</h2>
-                <p class="dolor">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie <br> malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
-                <div class="join"> JOIN NOW</div>
+        <div class="poster">
+            <div class="poster-container">
+                <h3 class="welcome">Welcome to <br> midnight party</h3>
+                <p class="dolor">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
             </div>
-            <img class="poster-image" src="images/Group 70.png" alt="">
+            <img class="main-image" src="images/Group 70.png" alt="">
+        </div>
+        <section class="details">
+            <div class="place"> <span class="pl1">place:</span> New Park Hotel</div>
+            <div class="date"> <span class="pl1">Date:</span> 31 December Night 2023</div>
+            <div class="time"> <span class="pl1">Time:</span> Evening 7.30 pm to 12.30 am </div>
+            <button class="join-now"> JOIN NOW</button>
         </section>
+        <section class="offer">
+
+            <div class="new">
+                <h4 class="best"> NEW BEST OFFER</h4>
+                <h1 class="coming"> Coming Soon</h1>
+                <p class="sit">Dolor sit amet consectetur. Consequat <br> eget consectetur maecenas sed molestie <br> malesuada. Ipsum sed sodales risus ut <br> pellentesque vel euismod. </p>
+            </div>
+            <div class="round-image"><img src="images/Ellipse 1.png" alt="">
+            </div>
+            <div class="xyz">
+                <h1 class="year">2024</h1>
+                <p class="amet">Dolor sit amet consectetur. <br> Consequat eget consectetur <br>  maecenas sed.</p>
+                <div class="image"><img src="images/Group 96.png" alt=""></div>
+            </div>
+        </section>
+        <!-- holidays sale section -->
+        <section class="holiday-section">
+            <h5 class="section-title">WHAT IS FUNCTIONAL</h5>
+            <h1 class="section-heading"> <span id="red">HOLIDAYS</span>  SALE 50%</h1>
+            <div class="paragraph">
+                <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed </p>
+                <p>molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. Eleifend nunc purus quam id </p>
+                <p>fermentum amet amet sit consectetur.</p>
+            </div>
+            <div class="holiday-image">
+                <img src="images/Group 75.png" alt="">
+                <img src="images/Group 44.png" alt="">
+            </div>
+        </section>
+        <!-- the best gift section -->
+        <section class="gift">
+            <div class="best-gifts">
+                <h6 class="bt">THE BEST GIFTS</h6>
+                <h2> Our Awesome Portfolio</h2>
+                <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. <br>Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+            </div>
+        </section>
+        
+        
     </main>
     <footer></footer>
 
