2nd banner done

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 </head>
 
-<body>
+<body class="fixed-margine">
     <header>
         <!-- banner section -->
         <div class="header-1">
@@ -30,16 +30,21 @@
             <h5 class="categories">ALL CATEGORIES</h5>
         </div>
         <img class="happy-image" src="images/New Year Photo.png" alt="">
+
+        <div class="poster">
+            <div>
+                <h1 class="welcome">Welcome to <br> midnight party</h1>
+                <p class="dolor">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie <br> malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+                <p class="join">JOIN NOW</p>
+            </div>
+            <div>
+                <img src="images/Group 70.png" alt="">
+            </div>
+        </div>
+
+        
     </header>
     <main>
-        <div class="poster">
-            <div class="poster-container">
-                <h3 class="welcome">Welcome to <br> midnight party</h3>
-                <p class="dolor">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada.
-                    Ipsum sed sodales risus ut pellentesque vel euismod. </p>
-            </div>
-            <img class="main-image" src="images/Group 70.png" alt="">
-        </div>
         <section class="details">
             <div class="place"> <span class="pl1">place:</span> New Park Hotel</div>
             <div class="date"> <span class="pl1">Date:</span> 31 December Night 2023</div>
