--- a/index.html
+++ b/index.html
@@ -24,28 +24,23 @@
                 <h1 class="banner-title2">New Year Party <br> Celebration</h1>
             </div>
         </div>
-        <div class="header-2">
-            <h1 class="off">65% OFF</h1>
-            <h6 class="holiday">OUR HOLIDAY DEALS ARE BETTER</h6>
-            <h5 class="categories">ALL CATEGORIES</h5>
-            <img class="happy-image" src="images/New Year Photo.png" alt="">
-
-        </div>
-        <!-- <img class="happy-image" src="images/New Year Photo.png" alt=""> -->
-
+        <section class="header-2">
+            <div class="header">
+                <h1 class="off">65% OFF</h1>
+                <h6 class="holiday">OUR HOLIDAY DEALS ARE BETTER</h6>
+                <h5 class="categories">ALL CATEGORIES</h5>
+                <img src="images/New Year Photo.png" alt="">
+            </div>
+        </section>
         <div class="poster">
             <div>
                 <h1 class="welcome">Welcome to <br> midnight party</h1>
                 <p class="dolor">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie <br>
                     malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
                 <p class="join">JOIN NOW</p>
-            </div>
-            <div>
-                <img src="images/Group 70.png" alt="">
-            </div>
+                <img class="hard-image" src="images/Group 70.png" alt="">
+            </div>                        
         </div>
-
-
     </header>
     <main>
         <section class="details">
@@ -54,25 +49,28 @@
             <div class="time"> <span class="pl1">Time:</span> Evening 7.30 pm to 12.30 am </div>
             <button class="join-now"> JOIN NOW</button>
         </section>
-        <section class="offer">
+        <section >
+            <div class="offer">
+                <div class="new">
+                    <h4 class="best"> NEW BEST OFFER</h4>
+                    <h1 class="coming"> Coming Soon</h1>
+                    <p class="sit">Dolor sit amet consectetur. Consequat <br> eget consectetur maecenas sed molestie <br>
+                        malesuada. Ipsum sed sodales risus ut <br> pellentesque vel euismod. </p>
+                </div>
+                <div class="round-image"><img src="images/Ellipse 1.png" style="circular-border: 2px solid red;" alt="">
+                </div>
+                <div class="xyz">
+                    <h1 class="year">2024</h1>
+                    <p class="amet">Dolor sit amet consectetur. <br> Consequat eget consectetur <br> maecenas sed.</p>
+                    <div class="image"><img src="images/Group 96.png" alt=""></div>
+                </div>
+            </div>
 
-            <div class="new">
-                <h4 class="best"> NEW BEST OFFER</h4>
-                <h1 class="coming"> Coming Soon</h1>
-                <p class="sit">Dolor sit amet consectetur. Consequat <br> eget consectetur maecenas sed molestie <br>
-                    malesuada. Ipsum sed sodales risus ut <br> pellentesque vel euismod. </p>
-            </div>
-            <div class="round-image"><img src="images/Ellipse 1.png" alt="">
-            </div>
-            <div class="xyz">
-                <h1 class="year">2024</h1>
-                <p class="amet">Dolor sit amet consectetur. <br> Consequat eget consectetur <br> maecenas sed.</p>
-                <div class="image"><img src="images/Group 96.png" alt=""></div>
-            </div>
+           
         </section>
         <!-- holidays sale section -->
-        <div class="xxx">
-            <section class="holiday-section">
+        <section class="xxx">
+            <div class="holiday-section">
                 <h5 class="section-title">WHAT IS FUNCTIONAL</h5>
                 <h1 class="section-heading"> <span id="red">HOLIDAYS</span> SALE 50%</h1>
                 <div class="paragraph">
@@ -86,8 +84,8 @@
                     <img src="images/Group 75.png" alt="">
                     <img src="images/Group 44.png" alt="">
                 </div>
-            </section>
-        </div>
+            </div>
+        </section>
         <!-- the best gift section -->
         <section class="gift">
             <div class="best-gifts">
@@ -112,8 +110,8 @@
         <section class="subscribe">
             <div>
                 <img src="images/Group 61.png" alt="">
-                <h1><b>Subscribe Newsletter</b></h1>
-                <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. <br> Ipsum
+                <h1>Subscribe Newsletter</b></h1>
+                <p class="p-color">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. <br> Ipsum
                     sed sodales risus ut pellentesque vel euismod. </p>
             </div>
             <button class="subscribe-btn">user@gmail.com </button>
@@ -126,11 +124,11 @@
                     <p>44, Big Building Roosevelt Street</p>
                     <p>Beach Gardens Florida 33410</p>
                 </div>
-                
+
                 <div class="contact-info">
                     <p> +00 123 584 124</p>
                     <p>www.website.com</p>
-                </div>                
+                </div>
             </div>
             <hr class="line">
             <div class="social-links">
