--- a/index.html
+++ b/index.html
@@ -32,15 +32,18 @@
                 <img src="images/New Year Photo.png" alt="">
             </div>
         </section>
-        <div class="poster">
-            <div>
-                <h1 class="welcome">Welcome to <br> midnight party</h1>
-                <p class="dolor">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie <br>
-                    malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
-                <p class="join">JOIN NOW</p>
-                <img class="hard-image" src="images/Group 70.png" alt="">
-            </div>                        
-        </div>
+        <section>
+            <div class="poster">
+                <img class="hard-image" src="images/Group 70.png" alt="Background Image" class="background-img">
+                <div class="text-on-image">
+                    <h1 class="welcome">Welcome to <br> midnight party</h1>
+                    <p class="dolor">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie <br>
+                        malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+                    <p class="join">JOIN NOW</p>
+                </div>
+
+            </div>
+        </section>
     </header>
     <main>
         <section class="details">
@@ -49,13 +52,15 @@
             <div class="time"> <span class="pl1">Time:</span> Evening 7.30 pm to 12.30 am </div>
             <button class="join-now"> JOIN NOW</button>
         </section>
-        <section >
+        <section>
             <div class="offer">
                 <div class="new">
                     <h4 class="best"> NEW BEST OFFER</h4>
                     <h1 class="coming"> Coming Soon</h1>
-                    <p class="sit">Dolor sit amet consectetur. Consequat <br> eget consectetur maecenas sed molestie <br>
-                        malesuada. Ipsum sed sodales risus ut <br> pellentesque vel euismod. </p>
+                    <p class="sit">Dolor sit amet consectetur. Consequat <br> eget consectetur maecenas sed molestie
+                        <br>
+                        malesuada. Ipsum sed sodales risus ut <br> pellentesque vel euismod.
+                    </p>
                 </div>
                 <div class="round-image"><img src="images/Ellipse 1.png" style="circular-border: 2px solid red;" alt="">
                 </div>
@@ -66,7 +71,7 @@
                 </div>
             </div>
 
-           
+
         </section>
         <!-- holidays sale section -->
         <section class="xxx">
@@ -111,7 +116,8 @@
             <div>
                 <img src="images/Group 61.png" alt="">
                 <h1>Subscribe Newsletter</b></h1>
-                <p class="p-color">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. <br> Ipsum
+                <p class="p-color">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie
+                    malesuada. <br> Ipsum
                     sed sodales risus ut pellentesque vel euismod. </p>
             </div>
             <button class="subscribe-btn">user@gmail.com </button>
