poster updated again

--- a/index.html
+++ b/index.html
@@ -34,14 +34,15 @@
         </section>
         <section>
             <div class="poster">
-                <img class="hard-image" src="images/Group 70.png" alt="Background Image" class="background-img">
-                <div class="text-on-image">
-                    <h1 class="welcome">Welcome to <br> midnight party</h1>
-                    <p class="dolor">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie <br>
-                        malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
-                    <p class="join">JOIN NOW</p>
+                <div class="banner-content">
+                    <h1 class="banner-title">Welcome to <br> midnight party</h1>
+                    <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society
+                        behaved moments.
+                    </p>   
+                    <p style="margin-left: 50px;"  > JOIN NOW</p>
                 </div>
-
+                <img class="hard-image" src="images/Group 70.png" alt="Background Image" class="background-img">
+                
             </div>
         </section>
     </header>
