--- a/index.html
+++ b/index.html
@@ -80,22 +80,21 @@
             <div class="holiday-section">
                 <h5 class="section-title">WHAT IS FUNCTIONAL</h5>
                 <h1 class="section-heading"> <span id="red">HOLIDAYS</span> SALE 50%</h1>
-                <div class="paragraph">
-                    <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed </p>
-                    <p>molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. Eleifend nunc purus quam
-                        id
-                    </p>
-                    <p>fermentum amet amet sit consectetur.</p>
-                    <div class="all images">
-                        <div class="girl"><img src="images/Rectangle 1.png" alt=""></div>
-                        <div class="box"><img src="images/Group 75.png" alt=""></div>
-                        <div class="discount"><img src="images/Group 44.png" alt=""></div>
-                        <div><img src="images/Rectangle 2.png" alt=""></div>
-        
-                    </div>
+
+                <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed </p>
+                <p>molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. Eleifend nunc purus quam
+                    id
+                </p>
+                <p>fermentum amet amet sit consectetur.</p>
+                <div class="all-images">
+                    <div class="girl"><img src="images/Rectangle 1.png" alt=""></div>
+                    <div class="box"><img src="images/Group 75.png" alt=""></div>
+                    <div class="discount"><img src="images/Group 44.png" alt=""></div>
+                    <div><img src="images/Rectangle 2.png" alt=""></div>
                 </div>
-                
-            </div>                     
+
+
+            </div>
         </section>
         <!-- the best gift section -->
         <section class="gift">
